# crossplay

./: Cargo.toml  LICENSE  README.md  set_env
assets/: CREDITS.txt
src/: assets.rs  library.rs  main.rs  settings.rs  tag_interface.rs  ui_util.rs  youtube.rs
src/views/: content.rs  crop.rs  download.rs  edit_metadata.rs  mod.rs  song_list.rs
src/widgets/: mod.rs  song_list.rs
