[package]
name = "crossplay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-process = "1.4.0"
gtk = "0.15.5"
id3 = "1.1.3"
regex = "1.5.6"
relm = "0.23.0"
relm-derive = "0.23.0"
serde = "1.0.137"
serde_json = "1.0.81"
