[package]
name = "crossplay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.4"
async-process = "1.4.0"
id3 = "1.1.3"
regex = "1.5.6"
serde = "1.0.137"
serde_json = "1.0.81"
tokio = { version = "1.19.2", features = ["rt-multi-thread", "macros", "sync"] }
image = "0.24.2"
