[package]
name = "crossplay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.4", features = ["pure"] }
async-process = "1.4.0"
id3 = "1.1.3"
regex = "1.5.6"
serde = "1.0.137"
serde_json = "1.0.81"
tokio = { version = "1.19.2", features = ["rt-multi-thread", "macros", "sync"] }
image = "0.24.2"
iced_futures = "0.4.1"
iced_video_player = { git = "https://github.com/AaronC81/iced_video_player" }
url = "2.2.2"
gstreamer = "0.18.8"
native-dialog = "0.6.3"
iced_native = "0.5.1"
